# BMC-CAN-Fw

./: .gdb_history  .gitignore  Cargo.toml  Embed.toml  README.md  debug.gdb  memory.x  openocd.gdb
.cargo/: config
.github/workflows/: checks.yml  clippy.yml  rustfmt.yml
src/: can.rs  can_types.rs  error_codes.rs  idle_mode.rs  main.rs  status.rs
