[package]
name = "bmc-can-rs"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
# cortex-m-semihosting = "0.3.4"
cortex-m-rtic = "0.5.5"
stm32f1 = "0.11.0"
embedded-hal = "0.2.3"
nb = "1.0.0"
volatile = "0.3.0"
# heapless "1.0.0"
bxcan = "0.2"
defmt = "0.1"
defmt-rtt = "0.1"
bitfield = "0.13.2"
# asm-delay = "0.9"

[dependencies.stm32f1xx-hal]
version = ""
features = ["stm32f103", "rt", "stm32-usbd"]

[patch.crates-io]
stm32f1xx-hal = { git = "https://github.com/timokroeger/stm32f1xx-hal", branch="bxcan", features = ["stm32f103", "rt", "stm32-usbd", "has-can"] }
bxcan = {git = "https://github.com/stm32-rs/bxcan" }

[[bin]]
name = "bmc-can-rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
lto = true
opt-level = 'z'

[profile.release.package.'*']
opt-level = "z"
debug = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = false
lto = true
opt-level = 'z'

[profile.dev.package.'*']
opt-level = "z"
debug = false
