[package]
name = "bmc-can-rs"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.6"
stm32f1 = "0.13.0"
embedded-hal = "0.2.4"
nb = "1.0.0"
heapless = "0.6.1"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
bitfield = "0.13.2"

[features]
heartbeat = []
logging = ["defmt-trace"]

defmt-info = []
defmt-debug = []
defmt-trace = []
defmt-error = []
defmt-warn = []

default = [
    "heartbeat"
]

[dependencies.bxcan]
git =  "https://github.com/stm32-rs/bxcan"
branch = "master"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
branch = "master"
features = ["stm32f103", "rt", "stm32-usbd", "has-can", "doc"]


[patch.crates-io]
bxcan = {git = "https://github.com/stm32-rs/bxcan", branch = "master"}

[[bin]]
name = "bmc-can-rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = true
opt-level = 'z'

[profile.release.package.'*']
opt-level = "z"
debug = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
opt-level = 'z'

[profile.dev.package.'*']
opt-level = "z"
debug = 2
